@@ -1,3 +1,7 @@
+1999-11-03  Nick Clifton  <nickc@cygnus.com>
+
+	* config/tc-mcore.h (TARGET_BYTES_BIG_ENDIAN): Change to false.
+
 1999-11-01  Gavin Romig-Koch  <gavin@cygnus.com>
 
 	* config/tc-mips.c (macro_build): Use OPCODE_IS_MEMBER.
